# flipdot-rpi

./: MODULE.bazel  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
example/python/: hello_world.py  py_talker.py
flipdot/fonts/: BUILD.bazel
flipdot/msgs/: BUILD.bazel  FlipDotFrame.msg
flipdot/scripts/: deploy_to_pi.sh
flipdot/src/: BUILD.bazel  controller.py  flipdot_manager.py  macros.bzl  test_publisher.py  test_subscriber.py  utils.py
flipdot/src/foxglove/: BUILD.bazel  bridge_visualizer_launch.py  data_paths.py.tql  foxglove_bridge.py  test_foxglove.py  visualizer.py
flipdot/src/states/: BUILD.bazel  base_state.py  clock_state.py  static_text_state.py  text_scroll_state.py  weather_state.py
flipdot/systemd/: flipdot-controller.service  flipdot-fsm.service  flipdot-rpi.target  flipdot-visualizer.service  foxglove-bridge.service
tools/lint/: ruff.bzl  setup_clang_env.sh
tools/ros2/: BUILD.bazel
