load("@com_github_mvukov_rules_ros2//ros2:interfaces.bzl", "cpp_ros2_interface_library", "py_ros2_interface_library", "ros2_interface_library")

ros2_interface_library(
    name = "flipdotframe_msg",
    srcs = ["FlipDotFrame.msg"],
    visibility = ["//visibility:public"],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
    ],
)

cpp_ros2_interface_library(
    name = "cpp_flipdotframe_msg",
    visibility = ["//visibility:public"],
    deps = [
        ":flipdotframe_msg",
    ],
)

py_ros2_interface_library(
    name = "py_flipdotframe_msg",
    visibility = ["//visibility:public"],
    deps = [
        ":flipdotframe_msg",
    ],
)
