load("@com_github_mvukov_rules_ros2//ros2:py_defs.bzl", "ros2_py_binary")
load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

py_library(
    name = "flipdot_utils",
    srcs = ["utils.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//flipdot/msgs:py_flipdotframe_msg",
    ],
)

ros2_py_binary(
    name = "test_publisher",
    srcs = ["test_publisher.py"],
    main = "test_publisher.py",
    visibility = ["//visibility:public"],
    deps = [
        ":flipdot_utils",
        "@ros2_rclpy//:rclpy",
    ],
)

ros2_py_binary(
    name = "test_subscriber",
    srcs = ["test_subscriber.py"],
    main = "test_subscriber.py",
    visibility = ["//visibility:public"],
    deps = [
        ":flipdot_utils",
        "@ros2_rclpy//:rclpy",
    ],
)

ros2_py_binary(
    name = "controller",
    srcs = ["controller.py"],
    main = "controller.py",
    visibility = ["//visibility:public"],
    deps = [
        ":flipdot_utils",
        "@ros2_rclpy//:rclpy",
        requirement("flippydot"),
    ],
)

pkg_tar(
    name = "flipdot_package",
    srcs = [
        ":test_publisher",
        ":test_subscriber",
        ":controller",
    ],
    include_runfiles = True, 
    strip_prefix = ".",
    # remove for flexibility
    # package_dir = "/opt/flipdot",
)