load("@com_github_mvukov_rules_ros2//ros2:py_defs.bzl", "ros2_py_binary")
load("@com_github_mvukov_rules_ros2//ros2:launch.bzl", "ros2_launch")
load("@com_github_mvukov_rules_ros2//third_party:expand_template.bzl", "expand_template")

ros2_py_binary(
    name = "visualizer",
    srcs = ["visualizer.py"],
    main = "visualizer.py",
    visibility = ["//visibility:public"],
    deps = [
        "//flipdot/msgs:py_flipdotframe_msg",
        "//flipdot/src:flipdot_utils",
        "@ros2_common_interfaces//:py_sensor_msgs",
        "@ros2_common_interfaces//:py_std_msgs",
        "@ros2_rclpy//:rclpy",
    ],
)

# expand_template(
#     name = "data_paths_py",
#     out = "data_paths.py",
#     data = [
#         ":visualizer",
#         "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:foxglove_bridge_node",
#     ],
#     substitutions = {
#         "{visualizer_node_path}": "$(rootpath :visualizer)",
#         "{foxglove_bridge_node_path}": "$(rootpath @com_github_mvukov_rules_ros2//third_party/foxglove_bridge:foxglove_bridge_node)",
#     },
#     template = "data_paths.py.tpl",
# )

ros2_launch(
    name = "bridge_visualizer_launch",
    launch_file = "bridge_visualizer_launch.py",
    nodes = [
        # ":visualizer",
        "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:foxglove_bridge_node",
    ],
    idl_deps = [
        "//flipdot/msgs:flipdotframe_msg",
        "@ros2_common_interfaces//:sensor_msgs",
    ],
    deps = [
        "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:utils",
    ],
)
