load("@com_github_mvukov_rules_ros2//ros2:py_defs.bzl", "ros2_py_binary")
load("@com_github_mvukov_rules_ros2//ros2:launch.bzl", "ros2_launch")
load("@rules_python//python:defs.bzl", "py_binary")
load("@py_deps//:requirements.bzl", "requirement")

ros2_py_binary(
    name = "test_foxglove",
    srcs = ["test_foxglove.py"],
    main = "test_foxglove.py",
    deps = [
        requirement("foxglove-sdk"),
        requirement("numpy"),
        "@ros2_rclpy//:rclpy",
        "@ros2_common_interfaces//:py_sensor_msgs",
    ],
    visibility = ["//visibility:public"],
)

ros2_py_binary(
    name = "visualizer",
    srcs = ["visualizer.py"],
    main = "visualizer.py",
    visibility = ["//visibility:public"],
    deps = [
        "//flipdot/msgs:py_flipdotframe_msg",
        "//flipdot/src:flipdot_utils",
        "@ros2_common_interfaces//:py_sensor_msgs",
        "@ros2_common_interfaces//:py_std_msgs",
        "@ros2_rclpy//:rclpy",
    ],
)

# ros2_launch(
#     name = "bridge_visualizer_launch",
#     launch_file = "bridge_visualizer_launch.py",
#     nodes = [
#         # ":visualizer",
#         "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:foxglove_bridge_node",
#     ],
#     idl_deps = [
#         "//flipdot/msgs:flipdotframe_msg",
#         "@ros2_common_interfaces//:sensor_msgs",
#     ],
#     deps = [
#         "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:utils",
#     ],
# )
