load("@com_github_mvukov_rules_ros2//ros2:py_defs.bzl", "ros2_py_binary")
load("@py_deps//:requirements.bzl", "requirement")
load("//flipdot/src:macros.bzl", "ros2_launcher")

ros2_py_binary(
    name = "foxglove_bridge",
    srcs = ["foxglove_bridge.py"],
    main = "foxglove_bridge.py",
    visibility = ["//visibility:public"],
    deps = [
        requirement("foxglove-sdk"),
        requirement("numpy"),
        "@ros2_common_interfaces//:py_sensor_msgs",
        "@ros2_rclpy//:rclpy",
    ],
)

ros2_py_binary(
    name = "visualizer",
    srcs = ["visualizer.py"],
    main = "visualizer.py",
    visibility = ["//visibility:public"],
    deps = [
        "//flipdot/msgs:py_flipdotframe_msg",
        "//flipdot/src:flipdot_utils",
        "@ros2_common_interfaces//:py_sensor_msgs",
        "@ros2_common_interfaces//:py_std_msgs",
        "@ros2_rclpy//:rclpy",
    ],
)

ros2_launcher(
    name = "run_bridge",
    target = "foxglove_bridge",
)

ros2_launcher(
    name = "run_visualizer",
    target = "visualizer",
)
