load("@rules_python//python:defs.bzl", "py_library")
load("@py_deps//:requirements.bzl", "requirement")


py_library(
    name = "states",
    srcs = [
        "clock_state.py",
        "base_state.py",
    ],
    data = ["//flipdot/fonts:fonts"],
    deps = [
        "@rules_python//python/runfiles:runfiles",
        requirement("pillow"),
        requirement("numpy"),
    ],
    visibility = ["//visibility:public"],
)