load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "states",
    srcs = [
        "base_state.py",
        "clock_state.py",
        "weather_state.py",
        "text_scroll_state.py",
    ],
    data = ["//flipdot/fonts"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_python//python/runfiles",
        requirement("pillow"),
        requirement("numpy"),
        requirement("requests"),
    ],
)
